JDO-817 removing compiler warnings: miscellaneous warnings